Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111443

macOS/iOS: "Detected system locale encoding (US-ASCII, locale "C") is not UTF-8"

XMLWordPrintable

    • iOS/tvOS/watchOS, macOS
    • 349bd4db2 (dev), ac6c7aa12 (dev), eec2fb938 (6.5.0), 7aac60bee (6.4), 21e3afc80 (tqtc/lts-6.2), 02eeb50eb (6.5), 3690c202f (dev), cf7d97286 (6.5), cd081991b (dev), b2cf019b9 (6.7), a2ab5cabb (6.6)

      I'm getting this message when running an app built with dev on macOS:

      Detected system locale encoding (US-ASCII, locale "C") is not UTF-8.
      Qt shall use a UTF-8 locale ("UTF-8") instead. If this causes problems,
      reconfigure your locale. See the locale(1) manual for more information.
      

      locale shows that my locale is UTF-8, so Creator seems to be doing something wrong:

      LANG="en_AU.UTF-8"
      LC_COLLATE="en_AU.UTF-8"
      LC_CTYPE="en_AU.UTF-8"
      LC_MESSAGES="en_AU.UTF-8"
      LC_MONETARY="en_AU.UTF-8"
      LC_NUMERIC="en_AU.UTF-8"
      LC_TIME="en_AU.UTF-8"
      LC_ALL=
      

      I don't get this warning when running the app from terminal.

        For Gerrit Dashboard: QTBUG-111443
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            mitch_curtis Mitch Curtis
            Votes:
            3 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: